flux/cluster/sso-workload/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sso-strip-prefix
  namespace: sso
spec:
  stripPrefix:
    prefixes:
      - /sso
