flux/cluster/sso-workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: sso
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: sso-sso-strip-prefix@kubernetescrd
spec:
  tls:
    - hosts:
        - homelab.nobeledgar3.cloud
      secretName: homelab-tls
  rules:
    - host: homelab.nobeledgar3.cloud
      http:
        paths:
          - path: /sso
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
